# my-day

./: .gitignore  LICENSE  README.md
be/: pyproject.toml  pyvenv.cfg
be/my-day/: app.py  data.py  models.py
fe/my-day/: README.md  angular.json  graphql-schema.json  karma.conf.js  package-lock.json  package.json
fe/my-day/__generated__/: globalTypes.ts
fe/my-day/e2e/src/: app.e2e-spec.ts
fe/my-day/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
fe/my-day/src/app/people-list/: people-list.component.html  people-list.component.ts
fe/my-day/src/app/services/: people.service.ts  queries.ts
fe/my-day/src/app/services/__generated__/: Chores.ts  Events.ts  People.ts
